content/_generated-doc/2.7/config/quarkus-qute-qute-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-qute-qute-runtime-config_configuration]]link:#quarkus-qute-qute-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-qute-qute-runtime-config_quarkus.qute.property-not-found-strategy]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.property-not-found-strategy[quarkus.qute.property-not-found-strategy]`

[.description]
--
The strategy used when a standalone expression evaluates to a "not found" value at runtime and the `io.quarkus.qute.strict-rendering` config property is set to `false` 
 This strategy is never used when evaluating section parameters, e.g. `++{#++if foo.name++}++`. In such case, it's the responsibility of the section to handle this situation appropriately. 
 By default, the `NOT_FOUND` constant is written to the output. However, in the development mode the `PropertyNotFoundStrategy++#++THROW_EXCEPTION` is used by default, i.e. when the strategy is not specified.
--|`default`, `noop`, `throw-exception`, `output-original` 
|


a| [[quarkus-qute-qute-runtime-config_quarkus.qute.remove-standalone-lines]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.remove-standalone-lines[quarkus.qute.remove-standalone-lines]`

[.description]
--
Specify whether the parser should remove standalone lines from the output. A standalone line is a line that contains at least one section tag, parameter declaration, or comment but no expression and no non-whitespace character.
--|boolean 
|`true`


a| [[quarkus-qute-qute-runtime-config_quarkus.qute.strict-rendering]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.strict-rendering[quarkus.qute.strict-rendering]`

[.description]
--
If set to `true` then any expression that is evaluated to a `Results.NotFound` value will always result in a `TemplateException` and the rendering is aborted. 
 Note that the `quarkus.qute.property-not-found-strategy` config property is completely ignored if strict rendering is enabled.
--|boolean 
|`true`

|===