content/_generated-doc/2.13/config/quarkus-qute-qute-runtime-config.adoc

:summaryTableId: quarkus-qute-qute-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-qute-qute-runtime-config_configuration]]link:#quarkus-qute-qute-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-qute-qute-runtime-config_quarkus.qute.property-not-found-strategy]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.property-not-found-strategy[quarkus.qute.property-not-found-strategy]`

[.description]
--
The strategy used when a standalone expression evaluates to a "not found" value at runtime and the `quarkus.qute.strict-rendering` config property is set to `false` 
This strategy is never used when evaluating section parameters, e.g. `++{#++if foo.name++}++`. In such case, it's the responsibility of the section to handle this situation appropriately. 
By default, the `NOT_FOUND` constant is written to the output. However, in the development mode the `PropertyNotFoundStrategy++#++THROW_EXCEPTION` is used by default, i.e. when the strategy is not specified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_PROPERTY_NOT_FOUND_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_PROPERTY_NOT_FOUND_STRATEGY+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:default[Output the `NOT_FOUND` constant.], tooltip:noop[No operation - no output.], tooltip:throw-exception[Throw a `TemplateException`.], tooltip:output-original[Output the original expression string, e.g. `++{++foo.name++}++`.] 
|


a| [[quarkus-qute-qute-runtime-config_quarkus.qute.remove-standalone-lines]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.remove-standalone-lines[quarkus.qute.remove-standalone-lines]`

[.description]
--
Specify whether the parser should remove standalone lines from the output. A standalone line is a line that contains at least one section tag, parameter declaration, or comment but no expression and no non-whitespace character.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_REMOVE_STANDALONE_LINES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_REMOVE_STANDALONE_LINES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-qute-qute-runtime-config_quarkus.qute.strict-rendering]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.strict-rendering[quarkus.qute.strict-rendering]`

[.description]
--
If set to `true` then any expression that is evaluated to a `Results.NotFound` value will always result in a `TemplateException` and the rendering is aborted. 
Note that the `quarkus.qute.property-not-found-strategy` config property is completely ignored if strict rendering is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_STRICT_RENDERING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_STRICT_RENDERING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-qute-qute-runtime-config_quarkus.qute.timeout]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.timeout[quarkus.qute.timeout]`

[.description]
--
The global rendering timeout in milliseconds. It is used if no `timeout` template instance attribute is set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|long 
|`10000`


a| [[quarkus-qute-qute-runtime-config_quarkus.qute.use-async-timeout]]`link:#quarkus-qute-qute-runtime-config_quarkus.qute.use-async-timeout[quarkus.qute.use-async-timeout]`

[.description]
--
If set to `true` then the timeout should also be used for asynchronous rendering methods, such as `TemplateInstance++#++createUni()` and `TemplateInstance++#++renderAsync()`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_USE_ASYNC_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_USE_ASYNC_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===